--- a/README
+++ b/README
@@ -1,3 +1,47 @@
+WWW-Embedly
+
 Perl API for embed.ly
 
 API documetation: http://embed.ly/docs/endpoints/1/oembed
+
+INSTALLATION
+
+To install this module, run the following commands:
+
+	perl Makefile.PL
+	make
+	make test
+	make install
+
+SUPPORT AND DOCUMENTATION
+
+After installing, you can find documentation for this module with the
+perldoc command.
+
+    perldoc WWW::Embedly
+
+You can also look for information at:
+
+    RT, CPAN's request tracker (report bugs here)
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=WWW-Embedly
+
+    AnnoCPAN, Annotated CPAN documentation
+        http://annocpan.org/dist/WWW-Embedly
+
+    CPAN Ratings
+        http://cpanratings.perl.org/d/WWW-Embedly
+
+    Search CPAN
+        http://search.cpan.org/dist/WWW-Embedly/
+
+
+LICENSE AND COPYRIGHT
+
+Copyright (C) 2012 Jason Wieland
+
+This program is free software; you can redistribute it and/or modify it
+under the terms of either: the GNU General Public License as published
+by the Free Software Foundation; or the Artistic License.
+
+See http://dev.perl.org/licenses/ for more information.
+
