--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 NAME
-    WWW::Embedly - Embedly web service API perl integration
+    WebService::Embedly - Embedly web service API perl integration
 
 VERSION
     Version 0.01
 
 SYNOPSIS
-        use WWW::Embedly;
+        use WebService::Embedly;
         use Ouch qw(:traditional);
 
-        my $embedly = WWW::Embedly->new({ api_key => 'get_your_key_at_embed.ly'});
+        my $embedly = WebService::Embedly->new({ api_key => 'get_your_key_at_embed.ly'});
 
         my $oembed_ref;
         my $e = try {
@@ -24,16 +24,17 @@ SYNOPSIS
         my $embed_html = $oembed_ref->{html}
 
 DESCRIPTION
-    The "WWW::Embedly" is a class implementing for querying the Embed.ly web
-    service. Prior to using this module you should go to <http://embed.ly>
-    and sign up for an api_key.
+    The "WebService::Embedly" is a class implementing for querying the
+    Embed.ly web service. Prior to using this module you should go to
+    <http://embed.ly> and sign up for an api_key.
 
     You can quickly try out the API by executing: ./sample/usage.pl --apikey
     you_api_key_from_embed.ly
 
-    "WWW::Embedly" exposes three methods: oembed, preview, objectify. Each
-    method has additional bits of metadata about the request URL. oembed
-    method follows the oembed standard documented here <http://oembed.com/>
+    "WebService::Embedly" exposes three methods: oembed, preview, objectify.
+    Each method has additional bits of metadata about the request URL.
+    oembed method follows the oembed standard documented here
+    <http://oembed.com/>
 
     Refer to <http://embed.ly> to learn more about the data that is returned
     for preview <http://embed.ly/docs/endpoints/1/preview> and objectify
@@ -60,30 +61,30 @@ DESCRIPTION
            return;
         }
 
-    "WWW::Embedly" uses Mouse (lighter version of Moose) to handle its
-    object management.
+    "WebService::Embedly" uses Mouse (lighter version of Moose) to handle
+    its object management.
 
 CONSTRUCTOR
     You must pass the api_key into the constructor:
 
-        my $embedly = WWW::Embedly->new({ api_key => 'get_your_key_at_embed.ly'});
+        my $embedly = WebService::Embedly->new({ api_key => 'get_your_key_at_embed.ly'});
 
-    "WWW::Embedly" uses LWP::UserAgent to handle its web requests. You have
-    the option to pass in your own LWP object in case of special
+    "WebService::Embedly" uses LWP::UserAgent to handle its web requests.
+    You have the option to pass in your own LWP object in case of special
     requirements, like a proxy server:
 
         my $ua = LWP::UserAgent->new();
         $ua->proxy('http', 'http://proxy.sn.no:8001/');
 
-        my $embedly = WWW::Embedly->new({ api_key => 'get_your_key_at_embed.ly',
+        my $embedly = WebService::Embedly->new({ api_key => 'get_your_key_at_embed.ly',
                                           ua => $ua
                                         });
 
   Optional Params
-    "WWW::Embedly" supports all optional parameters at the time of this
-    writing <http://embed.ly/docs/endpoints/arguments>. Refer to the embedly
-    documentation for the complete description. In the majority of cases you
-    only need to pay attention to the maxwidth param. It is highly
+    "WebService::Embedly" supports all optional parameters at the time of
+    this writing <http://embed.ly/docs/endpoints/arguments>. Refer to the
+    embedly documentation for the complete description. In the majority of
+    cases you only need to pay attention to the maxwidth param. It is highly
     recommended to specify maxwidth since the embed html could overflow the
     space you provide for it.
 
@@ -194,14 +195,14 @@ AUTHOR
 BUGS
     Please report any bugs or feature requests to "bug-www-embedly at
     rt.cpan.org", or through the web interface at
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=WWW-Embedly>. I will be
-    notified, and then you'll automatically be notified of progress on your
-    bug as I make changes.
+    <https://github.com/jwieland/embedly-perl/issues>. I will be notified,
+    and then you'll automatically be notified of progress on your bug as I
+    make changes.
 
 SUPPORT
     You can find documentation for this module with the perldoc command.
 
-        perldoc WWW::Embedly
+        perldoc WebService::Embedly
 
     You can also look for information at:
 
