another prereq for openbsd

--- a/README.pod
+++ b/README.pod
@@ -4,14 +4,15 @@ WebService::Embedly - Perl interface to the Embedly API
 
 =head1 VERSION
 
-Version 0.03
+Version 0.04
 
 =head1 SYNOPSIS
 
     use WebService::Embedly;
     use Ouch qw(:traditional);
 
-    my $embedly = WebService::Embedly->new({ api_key => 'get_your_key_at_embed.ly'});
+    my $embedly = WebService::Embedly->new({ api_key => 'get_your_key_at_embed.ly',
+   					     maxwidth => 500 });
 
     my $oembed_ref;
     my $e = try {
@@ -24,7 +25,7 @@ Version 0.03
     }
 
     #made it here, everything good.
-    my $embed_html = $oembed_ref->{html}
+    my $embed_html = $oembed_ref->{html};
 
 =head1 DESCRIPTION
 
