--- a/README.pod
+++ b/README.pod
@@ -1,3 +1,5 @@
+=encoding utf8
+
 =head1 NAME
 
 WebService::Embedly - Perl interface to the Embedly API
@@ -108,7 +110,7 @@ By default Embedly does not return script embeds for jsonp requests. They just d
 
 =head3 nostyle (default: false)
 
-There are a number of embeds that Embedly has created including Amazon.com, Foursquare, and Formspring. These all have <style> elements and inline styles associated with them that make the embeds look good. Accepted values: (true, false)
+There are a number of embeds that Embedly has created including Amazon.com, Foursquare, and Formspring. These all have style elements and inline styles associated with them that make the embeds look good. Accepted values: (true, false)
 
 =head3 autoplay (default: false)
 
@@ -175,7 +177,7 @@ Can throw an exception (ouch) so wrap in an eval or use Ouch module and refer to
 
 =head1 AUTHOR
 
-Jason Wieland, C<< <jwieland at cpan.org> >>
+Jason Wieland C<< <jwieland@cpan.org> >>
 
 =head1 BUGS
 
